--- a/gb/25/2/7/n14432106.md
+++ b/gb/25/2/7/n14432106.md
@@ -8,7 +8,7 @@
 <hr>
 	<p>【大纪元2025年02月08日讯】2月5日，新年上班第一天，陕西汉中洋县县委书记被群众拦车拖脚反映问题的视频，在网上引发关注。</p>
 <p>视频显示，一名官员正要坐上一辆商务车准备外出，被一名妇女拖住了右腿，视频中男子还威胁妇女，“你不要这样了嘛，走，上车，你再这样我就报警了。”不过，该妇女仍死死地抱住这名官员的小腿不放。</p>
-<p><a title="陕西女子在政府大院里抱住一官员腿讨说法 " src=" https://www.ganjingworld.com/embed/1hdh7298m702CxXiMfuFRf6BB1hq1c?t=11.284919" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<p><a title="陕西女子在政府大院里抱住一官员腿讨说法 " loading="lazy" data2-src=" https://www.ganjingworld.com/embed/1hdh7298m702CxXiMfuFRf6BB1hq1c?t=11.284919" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <p>有网民称，视频中的官员疑似汉中市洋县县委书记赵某。但网传视频中，该官员的脸部几乎都被打码，无法确定面容。</p>
 <p>2月6日晚，洋县政府新闻办公室发布通报称，视频中的男子不是县委书记，是该县某事业单位科级干部邓某，女子刘某某为洋县磨子桥镇柳树庙村村民。</p>
 <p>通报并称，2024年12月22日上午10时，刘某某丈夫张某某驾驶两轮电动自行车与邓某驾驶的小型客车在洋县北环路发生道路交通事故，致张某某受伤，之后双方因后续治疗、事故赔偿产生分歧。</p>
@@ -18,35 +18,33 @@
 <p>“县委书记呢？出来正面回答。”</p>
 <p>还有的说，“不是县委书记，会不会是县长呢？”</p>
 <p>责任编辑：高慧</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/8/n14432575.md#1">湖南警车连撞三车 官方称精神病人肇事惹议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/8/n14432559.md#1">张兰、汪小菲抖音账号被无限期封禁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/8/n14432480.md#1">中国队短道速滑2000米接力摔倒 韩国队夺冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/8/n14432458.md#1">河南万岁山巨人演员身高2.33米 需拄拐杖走路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542395.md#1">上海老人换房遭遇先买后卖 竟要赔付100万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542352.md#1">三退声明精选（2025/06/30）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14542190.md#1">小米新车YU7上市第二天 刹车片起火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14542063.md#1">大陆医患紧张 哈尔滨医院安检 病患被搜身</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/17/n9856722.md#1" target="_blank">毛泽东诗词“假借祭祖 骗取民心”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/7/5/13/n1708504.md#1" target="_blank">李洪志先生传法15年重要史实及辉煌历程</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/26/n10515170.md#1" target="_blank">林辉：蔡元培东床快婿的惨痛人生</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/9/11/n2259267.md#1" target="_blank">法轮功简介</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/24/n14317010.md#1">【古道人生】什么是真善？看他怎么待穷山民 善报不招自来！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14429072.md#1">【未解之谜】死于日军之手 杨氏兄妹做鬼38年再续前缘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14426917.md#1">利用立春升阳气 打造一年好彩头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/6/5/5/n1304965.md#1">【艺术小百科】优雅而浪漫的夜曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14428929.md#1">【杨延昭传奇】大破天门阵（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/8/n14432385.md#1">【马克时空】川普要乌克兰用稀土换美国援助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14432294.md#1">【唐青看时事】马斯克监管风暴 六奇兵震动美国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14432229.md#1">【佳音时刻】DeepSeek频爆雷 缅甸电诈内幕被揭</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431253.md#1">泰总理访北京 知情人揭一带一路电诈内幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430729.md#1">女企业家除夕曝光讨债遭遇 质问谁在坑中国人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430617.md#1">研究称DeepSeek与中国移动有联系 引担忧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431615.md#1">大陆疯传汪小菲助大S后事 小S：无法容忍的谎言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430660.md#1">中国经济低迷 民众过年弃旅游改观影 引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430750.md#1">大S不办告别式 生前曾痛恨过一纪念日</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14432298.md#1">包括大S 《流星花园》5演员遗憾享年不到50岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14432282.md#1">传大S骨灰择日树葬 S家疑已选好长眠地</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14431800.md#1">枕头发黄怎么办？ 专家推荐一物可迅速清理</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430355.md#1">为什么在室内晾衣服会影响健康？ 专家释疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431205.md#1">为何你会在凌晨3点醒来？ 如何继续入睡？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14429227.md#1">皮肤蜡黄 骨质疏松 都是糖化终产物惹的祸</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14431983.md#1">社交媒体会让人脾气暴躁？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/7/n14432106.htm">网传陕西女抱县领导大腿讨说法 引热议</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/7/n14432106.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
