--- a/gb/25/2/4/n14429997.md
+++ b/gb/25/2/4/n14429997.md
@@ -23,7 +23,7 @@
 <p>岳先生透露：“我们这里向来都是一刀切，年前所有街道的广告牌子，不管你花了多钱，没人通知，直接驾着吊车，连夜都拆除了。我光是广告灯箱就投入2万多元，也是才换新的，也就半年左右。我去问，人家说统一都砸烂了。”</p>
 <p>1月27日，大同市平城区古城街道办事处鼓楼社区下发的《古城亮化倡议书》显示，为了营造欢乐、祥和、喜庆的节日氛围，就做好节日期间的美化亮化工作，从1月27日（腊月二十八）—2月12日（正月十五），每晚18点到次日凌晨6点，属于亮灯时间段，要求室内留灯，古城内各商业门店应确保室内灯光充足，直至次日天明。门头牌匾、广告牌、LED电子屏及灯笼等应全部点亮，直至次日天明。</p>
 <p>古城街道办工作人员向陆媒证实，平城区有亮灯要求，“要从下午6点到第二天早上6点，这是我们大同市统一要求的。”</p>
-<p><center><a title="山西省大同市要求商户过年期间24小时开灯，否则强行撬门开灯！ ｜#中国新闻 新唐人大纪元联合频道" src=""></a><a href="https://d2agd1dsojkgmu.cloudfront.net/V6saycJJp"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hdb42o59nr1qMFCiYdyhwVrV1bi1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>上述报导引发网民关注和热议，有不少网民评论说：“店铺为私人场所，撬门进入与入室抢劫盗窃没什么区别！是真真切切的违法！”“私人财产不容侵犯，这不是私闯民宅土匪行为吗。”“哪个法律规定了商家必须彻夜亮灯，这是滥权，这是乱作为，这是违法！”</p>
+<p><center><a title="山西省大同市要求商户过年期间24小时开灯，否则强行撬门开灯！ ｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://d21y52w6f35pla.cloudfront.net/U1paycJJh"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hdb42o59nr1qMFCiYdyhwVrV1bi1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>上述报导引发网民关注和热议，有不少网民评论说：“店铺为私人场所，撬门进入与入室抢劫盗窃没什么区别！是真真切切的违法！”“私人财产不容侵犯，这不是私闯民宅土匪行为吗。”“哪个法律规定了商家必须彻夜亮灯，这是滥权，这是乱作为，这是违法！”</p>
 <p>还有网民表示：“店铺未按规定彻夜开灯，仅仅是违规；在未发生危险的情况下，执法人员就强行撬锁入室，这是公然违法，性质绝对不一样！”“这次大同出名了，可是我更不会去玩了，那里的执法人员太野蛮了，我怕！”</p>
 <p>实际上，上述大同市下发的倡议书中提到的“亮化工作”，是中共当局在各大城市推行的“亮化工程”的一部分。</p>
 <p>所谓“亮化工程”就是利用灯光美化城市的形象工程，是指为了美化城市环境，提高城市的整体形象，而对标志性建筑、商场、旅游景区、街道等人流量多的地方进行灯光亮化。</p>
@@ -37,34 +37,33 @@
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14398717.md#1" target="_blank" rel="noopener">卖羊肉赚180元被罚10万 江苏村民告市监局</a><br />
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/23/12/1/n14128222.md#1" target="_blank" rel="noopener">四川凉山祭新规 蹲地用餐将罚款 惹众怒</a><br />
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406287.md#1" target="_blank" rel="noopener">四川一老人在家熏腊肉被罚款 引争议</a></span></span></span></span></span></span></span></p>
-	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/21/4/17/n12886957.md#1">中国某县政府成“劫匪”交通罚款占财政1/3</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14330121.md#1">地方财政没钱了？吉林通榆县撤销逾900个机构</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/26/n14339153.md#1">中共地方政府为补财政“绑票勒索” 教授吁禁止</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/7/n14408361.md#1">山西运城车管所黑幕：每个岗位都收贿 雁过拔毛</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/2/n10947759.md#1" target="_blank">传奇总统里根（5）：竞选总统 众望所归</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/16/n11387274.md#1" target="_blank">7-20反迫害 美参众议员致信声援法轮功(1)</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/9/n10840435.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/24/n8031801.md#1" target="_blank">五年偏瘫一念即愈</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/29/n10750586.md#1">张飞转世？岳家将牛皋怒喝退金兵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426554.md#1">组图：台湾故宫新年推“岁时吉庆”文物特展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/24/n14317010.md#1">【古道人生】什么是真善？看他怎么待穷山民 善报不招自来！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406436.md#1">古代的中国人是如何过年的？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14426917.md#1">利用立春升阳气 打造一年好彩头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14429172.md#1">【百年真相】习擒贼不擒王 给自己树敌无数</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14425068.md#1">【中国禁闻】卢比奥到访后 巴拿马将退一带一路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429842.md#1">【佳音时刻】川普关税引市场动荡 北京提贸协？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427452.md#1">为何大量黄条白条被密封运往美国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14428513.md#1">天文学家发现一颗20光年外“超级地球”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14428523.md#1">小S证实：大S罹流感并发肺炎病逝 享年48岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14428784.md#1">大S日本猝逝“暂无法返台” 徐妈悲发声明曝遗愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14429178.md#1">汪小菲疑早知大S病危 2天前曾急喊“在抢救”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427530.md#1">赵丽颖大年初二晒拜年照 俏皮试戴奶奶的帽子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14428726.md#1">大S猝逝消息震惊亚洲 演艺圈星友齐哀悼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/2/n14428051.md#1">为什么未来飞机的座椅将由生物塑胶制造？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426062.md#1">早餐如何吃？ 七原则让你健康又减脂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14428721.md#1">冬天缺少维生素D？ 你应该吃这些食物补充</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429348.md#1">心理学家：这三大NG行为可能会让你离婚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14426838.md#1">记忆力衰退？ 超强组合助你对抗脑衰老</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/4/n14429997.htm">山西商户未按要求彻夜亮灯 被官方撬门开灯</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429997.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
